# text-to-sql-assistant

./: .gitignore  README.md  pyproject.toml  renovate.json
src/: main.py
src/adapters/agent/crew/: agents.py  crews.py  tasks.py
src/adapters/llm/: huggingface.py
src/domain/: model.py
src/domain/agent/: DBAssistant.py
src/domain/prompts/: catalog.py
src/tests/: simple.py
