[tool.poetry]
name = "text-to-sql"
version = "0.1.0"
description = ""
authors = ["Fabien R <9103762+Fabien-R@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
crewai = "0.32.2"
huggingface-hub = "0.26.1"
python = "3.13.0"
python-dotenv = "1.0.1"

[tool.poetry.group.test.dependencies]
pytest = "8.3.3"

[tool.pytest.ini_options]
testpaths = [
    "src/tests",
]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
